Sat Aug 11 23:29:32 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Fixed annoying bug where feh would limit window size to desktop
	size only on the first image.

Sat Aug 11 23:20:09 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Added -g, --geometry setting to fix feh's geometry. Stops
	repeated resizing when browsing lots of pics. Please test this for
	me as I want to get 1.0 out soon :)p

Sat Aug 11 01:41:21 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Add image and filelist saving to context menus.
	* Tidy menus.

Sat Aug 11 01:25:15 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Fixed missing break; in keyevent handler
	* Changed the slideshow pause key from "s,S" to "h,H"
	* New slideshow key "s,S" to save the current image to a unique
	filename (generated in the same way as saved webcam images).
	* New slideshow key "f,F" to save the current filelist, also to a
	unique filename.
	* Little cleanups.

Thu Aug  9 23:57:41 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Oops. Went back to getopt_long. getopt_long_only is cool if you
	only have a few cmdline options, but feh has a bunch and most
	short option combos were coming up as "ambiguous". i.e. feh -Vw
	actually ignores the -w. Fixed.

Thu Aug  9 23:39:02 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Remembered some things I changed a while back and didn't put in
	here, but they need to be in here or I'll forget forever.
	* Fixed a race with multiple webcam-viewing feh instances by
	adding feh PID to the tmp filename used to cache the downloaded
	images. Other fixups to the remote-getting code.

Thu Aug  9 23:16:58 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Load menu font just once and keep it around.
	* New menu backgrounds.
	* Fix detection of bad fonts.
	* Allow use of --fontpath multiple times to add many paths
	to the fontpath.

Thu Aug  9 22:45:05 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Progressive loading is gone. It's useless in imlib2 because