@@ -130,6 +130,9 @@ Make the window fullscreen
 .B -g, --geometry STRING
 Limit (and don't change) the window size. Takes
 an X-style geometry string like 640x480.
+Note that larger images will be zoomed out to fit
+but you can see them at 1:1 by clicking the zoom
+button.
 .TP 5
 .B -Z, --auto-zoom
 Zoom picture to screen size in fullscreen (affected by --stretch and
