@@ -80,7 +80,6 @@ struct __fehoptions
 
    unsigned char next_button;
    unsigned char zoom_button;
-   unsigned char pan_button;
    unsigned char menu_button;
    unsigned char menu_ctrl_mask;
 
