@@ -1,3 +1,8 @@
+Sun Aug 12 00:15:06 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
+
+	* Oops. Fixed bug with zooming out larger images when -g is used.
+	* Other fixes.
+
 Sat Aug 11 23:29:32 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
 
 	* Fixed annoying bug where feh would limit window size to desktop
